# MECT1ano-IC

./: .gitignore  README.md
trabalho1/bit_stream/src/: CMakeLists.txt  dct_decoder.cpp  dct_encoder.cpp  wav_quant_dec.cpp  wav_quant_enc.cpp  wav_snr.cpp
trabalho1/bit_stream/test/: dct_0_2  dct_0_4  dct_0_6  dct_0_8  dct_1  output_bin
trabalho1/sndfile-example/src/: CMakeLists.txt  wav_cmp.cpp  wav_dct.cpp  wav_effects.cpp  wav_hist.cpp  wav_hist.h  wav_quant.cpp
trabalho2/: CMakeLists.txt  Makefile  audio_codec.cpp  audio_codec.h  ex1.c  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  golomb.cpp  golomb.h  image_codec.cpp  image_codec.h
trabalho2/images/: DoBronx.ppm  baboon_grayscale.ppm
trabalho2/test/: arial_encoded.gicl  arial_encoded_m32.gicl  baboon_encoded.gicl  baboon_encoded_m32.gicl  complex_sample_encoded.flac  complex_sample_encoded.gacl  lena_decoded_m32.ppm  lena_encoded.gicl  lena_encoded_m4.gicl  sine_wave_encoded.flac  sine_wave_encoded.gacl  sine_wave_encoded_m32.gacl  speech_encoded.flac  speech_encoded.gacl  speech_encoded_m32.gacl
trabalho3/: .gitignore  asc.py  trabalho3.py
